# plexe

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  config.yaml.template  pyproject.toml  tox.ini
.github/workflows/: integration.yml  publish.yml  version-check.yml
examples/datasets/spaceship-titanic/: train.parquet
examples/local/: spaceship_titanic.py
plexe/: CODE_INDEX.md  checkpointing.py  config.py  constants.py  helpers.py  main.py  models.py  retrain.py  viz.py  workflow.py
plexe/agents/: baseline_builder.py  dataset_splitter.py  feature_processor.py  hypothesiser.py  insight_extractor.py  layout_detector.py  metric_implementer.py  metric_selector.py  ml_task_analyser.py  model_definer.py  model_evaluator.py  planner.py  sampler.py  statistical_analyser.py  utils.py
plexe/execution/: __init__.py
plexe/execution/dataproc/: __init__.py  dataset_io.py  session.py
plexe/execution/training/: local_runner.py  runner.py
plexe/integrations/: base.py  standalone.py
plexe/integrations/storage/: __init__.py  azure.py  gcs.py  s3.py
plexe/search/: __init__.py  evolutionary_search_policy.py  insight_store.py  journal.py  policy.py  tree_policy.py
plexe/templates/features/: __init__.py  pipeline.tmpl.py  pipeline_fitter.py  pipeline_runner.py
plexe/templates/inference/: catboost_predictor.py  keras_predictor.py  lightgbm_predictor.py  pytorch_predictor.py  xgboost_predictor.py
plexe/templates/packaging/: README.md.template  model_card_template.py
plexe/templates/training/: train_catboost.py  train_keras.py  train_lightgbm.py  train_pytorch.py  train_xgboost.py
plexe/tools/: submission.py
plexe/utils/: litellm_wrapper.py  parquet_dataset.py  reporting.py  s3.py  tooling.py  tracing.py
plexe/utils/dashboard/: __init__.py  app.py  discovery.py  theme.py  utils.py
plexe/utils/dashboard/tabs/: __init__.py  baselines.py  data_preparation.py  data_understanding.py  evaluation.py  model_package.py  overview.py  search_tree.py
plexe/validation/: validators.py
scripts/: check_version_bump.py  generate_code_index.py  generate_config_template.py
tests/: CODE_INDEX.md  conftest.py
tests/integration/: conftest.py  test_feedback.py
tests/unit/: test_baseline_probability_validation.py  test_catboost_predictor.py  test_config.py  test_helpers.py  test_imports.py  test_keras_predictor.py  test_lightgbm_predictor.py  test_main_dataset_inputs.py  test_models.py  test_pytorch_predictor.py  test_submission_pytorch.py  test_submission_split_validation.py  test_xgboost_predictor.py
tests/unit/agents/: test_dataset_splitter_prompt.py  test_model_evaluator_prompt.py
tests/unit/execution/training/: test_local_runner.py
tests/unit/search/: test_evolutionary_policy_determinism.py  test_insight_store.py  test_journal.py  test_tree_policy_determinism.py
tests/unit/templates/: __init__.py
tests/unit/templates/features/: __init__.py  test_pipeline_runner.py
tests/unit/templates/training/: test_train_pytorch_worker_fallback.py
tests/unit/utils/: test_parquet_dataset.py  test_reporting.py  test_tooling.py
tests/unit/validation/: test_validators.py
tests/unit/workflow/: test_column_exclusion.py  test_model_card.py  test_prepare_data_explicit_splits.py
