[tool.poetry]
name = "plexe"
version = "1.0.1"
description = "An agentic framework for building ML models from natural language"
authors = [
    "Marcello De Bernardi <mdebernardi@plexe.ai>",
    "Vaibhav Dubey <vdubey@plexe.ai>"
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/plexe-ai/plexe"
homepage = "https://github.com/plexe-ai/plexe"
packages = [{ include = "plexe" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["agent", "custom ai", "llm", "machine learning", "data generation"]

[tool.poetry.scripts]
plexe = "plexe.main:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# Python version-specific numpy (numpy 2.x requires Python 3.11+)
numpy = [
    { version = ">=1.26.0,<2.0.0", python = "~3.10" },
    { version = ">=2.3.4,<2.4.0", python = ">=3.11" }
]

# Core ML libraries - tensorflow 2.20.0 supports Python 3.10+ (no version split needed!)
tensorflow = ">=2.20.0,<2.21.0"
keras = ">=3.12.0,<3.13.0"

# Data processing
pandas = ">=2.3.3,<2.4.0"
xgboost = ">=3.1.1,<3.2.0"
catboost = ">=1.2.0,<1.3.0"
pyarrow = ">=22.0.0,<23.0.0"
datasets = ">=4.4.1,<5.0.0"
scikit-learn = ">=1.7.2,<1.8.0"

# AI/LLM frameworks
smolagents = ">=1.22.0,<2.0.0"
litellm = ">=1.79.3,<2.0.0"
langchain = "0.3.27"

# Observability (compatible with protobuf 5.28+)
openinference-instrumentation-smolagents = ">=0.1.19,<0.2.0"
opentelemetry-sdk = ">=1.30.0,<2.0.0"
opentelemetry-exporter-otlp-proto-http = ">=1.30.0,<2.0.0"

# Utilities
joblib = ">=1.5.2,<2.0.0"
cloudpickle = ">=3.1.2,<3.2.0"
dataclasses-json = ">=0.6.7,<0.7.0"
pyyaml = ">=6.0.0,<7.0.0"
pydantic = ">=2.7.4,<3.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"

# Optional dependencies
pyspark = { version = ">=4.0.1,<4.1.0", optional = true }
databricks-connect = { version = ">=17.3.1,<18.0.0", python = "3.12", optional = true }
boto3 = { version = ">=1.35.0,<2.0.0", optional = true }

[tool.poetry.extras]
pyspark = ["pyspark"]
databricks = ["databricks-connect"]
aws = ["boto3"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.0.1"
ruff = "^0.14.9"
black = ">=23.0.0"
streamlit = ">=1.52.1,<2.0.0"
plotly = ">=6.5.0,<7.0.0"
boto3 = "^1.42.44"

[tool.semantic_release]
version_variables = ["pyproject.toml:version"]
commit_parser = "angular"
build_command = "poetry build"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py312"]
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Note: we enforce docstrings because scripts/generate_code_index.py relies on them to produce good documentation
extend-select = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
#    "D102", # Missing docstring in public method  TODO: enable gradually
#    "D103", # Missing docstring in public function  TODO: enable gradually
]
ignore = [
    "E203", # Whitespace before ':'
    "E501", # Line length
    "E402", # Imports not at top of file
]